Fixed dark mode styling for corrections. (#564)

--- a/ts/packages/shell/src/renderer/assets/styles.less
+++ b/ts/packages/shell/src/renderer/assets/styles.less
@@ -53,6 +53,10 @@ body {
       color: white;
     }
   }
+
+  .action-text {
+    color: lightgray;
+  }
 }
 
 .wrapper {
